--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "component-builder": "~0.8.3",
-    "component-stylus": "~1.1.3"
+    "component-stylus": "~1.1.3",
+    "component-jade": "~0.3.1"
   }
 }
